--- a/.travis.yml
+++ b/.travis.yml
@@ -20,15 +20,17 @@ install:
 before_script:
   - chmod 0777 scripts/CI/makefile2unix.sh
   - scripts/CI/makefile2unix.sh uart/
-  - scripts/CI/makefile2unix.sh uartDEMO/
+  # - scripts/CI/makefile2unix.sh uartDEMO/
   - scripts/CI/makefile2unix.sh spi/
-  - scripts/CI/makefile2unix.sh spiDEMO/
+  # - scripts/CI/makefile2unix.sh spiDEMO/
   - scripts/CI/makefile2unix.sh twi/
-  - scripts/CI/makefile2unix.sh twiDEMO/
+  # - scripts/CI/makefile2unix.sh twiDEMO/
+  - scripts/CI/makefile2unix.sh adc/
+  # - scripts/CI/makefile2unix.sh adcDEMO/
   - scripts/CI/makefile2unix.sh pwm/
-  - scripts/CI/makefile2unix.sh pwmDEMO/
+  # - scripts/CI/makefile2unix.sh pwmDEMO/
   - scripts/CI/makefile2unix.sh lcd/
-  - scripts/CI/makefile2unix.sh lcdDEMO/
+  # - scripts/CI/makefile2unix.sh lcdDEMO/
 
 
 # Run Build Script
@@ -46,6 +48,10 @@ script:
   - make
   - cd ../../
   - cd pwm/Debug
+  - mkdir src
+  - make
+  - cd ../../
+  - cd adc/Debug
   - mkdir src
   - make
   - cd ../../
