--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,9 @@ before_script:
   # - scripts/CI/makefile2unix.sh spiDEMO/
   - scripts/CI/makefile2unix.sh twi/
   # - scripts/CI/makefile2unix.sh twiDEMO/
-  - scripts/CI/makefile2unix.sh adc/
+  # - scripts/CI/makefile2unix.sh adc/
   # - scripts/CI/makefile2unix.sh adcDEMO/
-  - scripts/CI/makefile2unix.sh pwm/
+  # - scripts/CI/makefile2unix.sh pwm/
   # - scripts/CI/makefile2unix.sh pwmDEMO/
   - scripts/CI/makefile2unix.sh lcd/
   # - scripts/CI/makefile2unix.sh lcdDEMO/
