--- a/.travis.yml
+++ b/.travis.yml
@@ -51,11 +51,11 @@ script:
   - mkdir src
   - make
   - cd ../../
-  - cd adc/Debug
-  - mkdir src
-  - make
-  - cd ../../
-  - cd lcd/Debug
-  - mkdir src
-  - make
-  - cd ../../
+  # - cd adc/Debug
+  # - mkdir src
+  # - make
+  # - cd ../../
+  # - cd lcd/Debug
+  # - mkdir src
+  # - make
+  # - cd ../../
